[gd_scene load_steps=2 format=3 uid="uid://bxqx8iqvnl4fs_arena"]

[ext_resource type="Script" path="res://scenes/arena/Arena.gd" id="1_0lc8k"]

[node name="Arena" type="Node2D"]
script = ExtResource("1_0lc8k")

[node name="MM_Projectiles" type="MultiMeshInstance2D" parent="."]

<<<<<<< HEAD
[node name="MM_Enemies_Swarm" type="MultiMeshInstance2D" parent="."]

[node name="MM_Enemies_Regular" type="MultiMeshInstance2D" parent="."]

[node name="MM_Enemies_Elite" type="MultiMeshInstance2D" parent="."]

[node name="MM_Enemies_Boss" type="MultiMeshInstance2D" parent="."]
=======
>>>>>>> fix-enemy-behavior

[node name="MM_Walls" type="MultiMeshInstance2D" parent="."]

[node name="MM_Terrain" type="MultiMeshInstance2D" parent="."]

[node name="MM_Obstacles" type="MultiMeshInstance2D" parent="."]

[node name="MM_Interactables" type="MultiMeshInstance2D" parent="."]

[node name="MeleeEffects" type="Node2D" parent="."]
